Make CSS selector more specific: This fixes a style bug on the Visibility selector in the New Post form in river view.

--- a/scss/excerpts-view.scss
+++ b/scss/excerpts-view.scss
@@ -16,7 +16,7 @@ body.excerpts-view .main {
     padding: 0;
     background-color: transparent;
 
-    select {
+    select#river-selector {
       width: 400px;
     }
 
